--- a/source/d3Basics/index-3.html
+++ b/source/d3Basics/index-3.html
@@ -5,6 +5,14 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
+    <table>
+      <thead>
+        <th>index</th>
+        <th>datum</th>
+      </thead>
+      <tbody>
+      </tbody>
+    </table>
   <script src="js/d3.js"></script>
   <script src="js/script.js"></script>
   <!-- <script src="js/completed-script.js"></script> -->
