--- a/source/drawingWithD3/index-4.html
+++ b/source/drawingWithD3/index-4.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
+    <div id="example">
+    </div>
   <script src="js/d3.js"></script>
   <script src="js/script.js"></script>
   <!-- <script src="js/completed-script.js"></script> -->
